# ops-examples

./: .gitignore  README.md
Idris/: README.md  config.json
R/: README.md  config.json  hi.r
ada/: README.md  hello.adb
algol/: README.md  config.json
aria/: README.md  config.json  github_user.aria
arturo/: README.md  web.art  web.json
austral/: README.md  hello.aum
axe/: README.md  hi.axe
b/: README.md  hello_world.b
bog/: README.md  hi.bog
bolt/: README.md  hi.bolt
c/: README.md
c3/: README.md  main.c3
clojure/: README.md  config.json
cpp/: README.md
cpp2/: README.md  hello.cpp2
crystal/: README.md
cyber/: README.md  hi.cy
d/: README.md  dub.json
dada/: README.md  config.json  hi.dada
dart/: README.md  test.dart
dot-net/: README.md
dotnet/: Program.cs  README.md  config.json
duck/: README.md  dargo.toml
elixir/: README.md
fennel/: README.md  hi.fl
flix/: README.md  config.json
golang/: README.md
gravity/: README.md  config.json  hi.gravity
hare/: README.md
haskell/: README.md
hvm/: README.md
janet/: README.md  config.json  echo.ml
jule/: README.md  main.jule
koka/: README.md
kotlin/: README.md  hello.kt
lily/: README.md  config.json  hi.lily
luau/: README.md  config.json  hi.luau
modula-3/: Hello.m3  README.md  config.json
moonbit/: README.md  config.json
mun/: README.md  config.json
nature/: README.md
nelua/: README.md
nim/: README.md  hi.nim
odin/: README.md  hi.odin
onion/: README.md  (+2 more)
rust/03-rust-sqlx/: Cargo.toml  README.md  config.json
rust/03-rust-sqlx/src/: main.rs
(+215 files in other folders)
